# Weekly_US_Stock

./: .env.example  .gitattributes  .gitignore  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  weekly_run.yml
config/: default.yaml
latest/: dashboard.md  feishu_summary.md  funnel_ledger.csv  hard_filter_candidates.csv  hard_filter_rejected.csv  invalid_valuations.csv  normalization_rejected.csv  normalized_financials.csv  paper_portfolio.csv  research_queue.csv  result.json  robust_ranking.csv  roic_routed.csv  run_manifest.json  run_metadata.json  scenario_valuations.csv  specialist_valuations.csv  turnaround_watchlist.csv  universe.csv  upside_ranking.csv  watchlist.csv
scripts/: generate_sample_data.py  openclaw_trigger_actions.sh  openclaw_wait_for_scheduled_result.sh
tests/: conftest.py  test_8k_events.py  test_archive.py  test_buybacks.py  test_calendar.py  test_cross_asset.py  test_cross_process_lock.py  test_eligibility.py  test_events.py  test_fingerprint_compare.py  test_forward_runner.py  test_forward_validation.py  test_funnel.py  test_hard_filters.py  test_index_membership.py  test_index_universe.py  test_normalization.py  test_oneoff_detection.py  test_pipeline_e2e.py  test_providers.py  test_quant_stage1.py  test_ranking.py  test_result_check.py  test_roic_routing.py  test_sbc_model.py  test_scenario_semantics.py  test_scenarios.py  test_sec_reconcile.py  test_sec_wiring.py  test_specialist_models.py  test_turnaround.py  test_valuation_alerts.py  test_valuation_guards.py  test_workflows.py  test_ytd_guard.py
(+180 files in other folders)
