[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weekly-us-stock"
version = "0.1.0"
description = "Weekly US-listed stock screener: hard filters, normalized financials, probabilistic scenario valuation, and risk-adjusted ranking. Research only; no trading."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Weekly US Stock Maintainers" }]
dependencies = [
  "pandas>=2.2",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "pyyaml>=6.0",
  "requests>=2.31",
  "tenacity>=8.2",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
weekly-us-stock = "weekly_us_stock.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/weekly_us_stock"]

[tool.pytest.ini_options]
# importlib mode + repo root on the path lets `from tests.conftest import ...`
# resolve under a plain `pytest` / `python -m pytest` in a clean checkout,
# without relying on an editable install or `-m`'s cwd insertion.
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "--import-mode=importlib"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
